# the-scheme

./: .gitignore  .pylintrc  docs.md  helpers.py  pyproject.toml  pytest.ini  readme.md
docs/: README.md
docs/ru/: README.md  generators.md  next.md
docs/ru/layers/0/: README.md  changelog.md
docs/ru/next/: README.md
docs/ru/versions/: README.md
docs/ru/versions/0/0.1/: README.md
src/layers/next/: main.py
src/layers/next/core/: __init__.py  builtins.py
src/layers/next/tests/: __init__.py  test_convert_to_scheme.py  test_types_equal.py  test_validation.py
src/versions/0.1/: main.py
