[tool.poetry]
name = "binary-scheme"
version = "0.1"
description = ""
authors = ["Mark Fomin <mark@difhel.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
